--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,9 @@
                         </div>
               </div>
 
+              <footer>
+                  <caption>Created by Jordan Litsas 2021</caption>
+              </footer>
 
               
               <!-- <div id = "wrapper">
