--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           
              <div class = "top-nav">
                <ul>
-                 <li><a href = "#">Home</a></li>
+                 <li><a href = "./index.html">Home</a></li>
                  <li><a href = "#">About</a></li>
                  <li><a href = "#">Contact</a></li> 
                </ul>
