--- a/public/dbmsUserEntry.html
+++ b/public/dbmsUserEntry.html
@@ -5,7 +5,7 @@
         <title>The Databaser</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href = "dbStyle.css">
+        <link rel="stylesheet" href = "./css/dbStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -60,6 +60,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         
 
-        <script src = "dbmsUserEntry.js"></script>
+        <script type = "module" src = "./js/dbmsUserEntry.js"></script>
+        <script type = "module" src = "./js/env.js"></script>
             </body>
             </html>
