MVC Complete Prac 5

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class = "col s6">
                                     <div class = "project-links">
-                                        <a href="/mainProject" class = "waves-effect waves-light btn project-link-item">
+                                        <a href="/projects/mainProject" class = "waves-effect waves-light btn project-link-item">
                                           <i class="material-icons right">cloud</i>
                                           Try it out
                                         </a>
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class = "col s6">
                                   <div class = "project-links">
-                                    <a href="./dbmsUserEntry.html" class = "waves-effect waves-light btn project-link-item">
+                                    <a href="/projects/sqlGenerator" class = "waves-effect waves-light btn project-link-item">
                                       <i class="material-icons right">cloud</i>
                                       Try it out
                                     </a>
@@ -169,7 +169,7 @@
                           </div>
                           <div class = "col s6">
                             <div class = "project-links">
-                              <a href="/chessProject" class = "waves-effect waves-light btn project-link-item">
+                              <a href="/projects/chessProject" class = "waves-effect waves-light btn project-link-item">
                                 <i class="material-icons right">cloud</i>
                                 Try it out
                               </a>
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class = "col s6">
                                   <div class = "project-links">
-                                    <a href="/weatherApp" class = "waves-effect waves-light btn project-link-item">
+                                    <a href="/projects/weatherApp" class = "waves-effect waves-light btn project-link-item">
                                       <i class="material-icons right">cloud</i>
                                       Try it out
                                     </a>
