removed old portfolio link + link to pf

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <nav class = "dark-blue">
           <div class = "top-nav">
             <ul>
-              <li><a href = "./index.html"><img src = './resources/home-icon.svg' id = "home-icon"></a></li>
+              <li><a href = "https://jordanlitsas.github.io"><img src = './resources/home-icon.svg' id = "home-icon"></a></li>
             </ul>
            </div>
           </nav>
@@ -27,7 +27,7 @@
         <div class = "row" >
             <div class = "col s4"></div>
             <div class = "col s4">
-                <h4>Sqlite3 Database Generator</h4>
+                <h4>Sqlite3 Script Generator</h4>
                 <p>This app allows a user to create a sqlite3 script by utilising an intuitive ERD-like interface.</p>
                 <p>You're able to save and resume your work, and ultimately generate a text file containing the sql syntax to create your database.</p>
                 <p>This tool allows you to design your relational database, and generate a script from that design.</p>
