--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The Databaser</title>
+        <title>Sqlite3 Table Generator</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href = "./css/dbStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="stylesheet" href = "./css/dbStyle.css">
 
     </head>
     <body id = "demo">
